--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "singleQuote": true
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@next/font": "^13.1.1",
     "@sanity/demo": "^1.0.1",
     "@sanity/vision": "^3.1.4",
@@ -22,6 +23,7 @@
     "next-sanity": "^3.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remixicon": "^3.3.0",
     "sanity": "^3.1.4",
     "styled-components": "^5.3.6"
   },
